[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Fields/string_field_and_button.gd" type="Script" id=1]

[node name="stringFieldAndButton" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 100, 70 )
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="HBoxContainer"]
margin_top = 293.0
margin_right = 64.0
margin_bottom = 307.0
text = "Test text: "

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 68.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextEdit" type="TextEdit" parent="HBoxContainer/VBoxContainer"]
margin_right = 956.0
margin_bottom = 566.0
rect_min_size = Vector2( 100, 30 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "dasdasdasd"

[node name="ActionBtn" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 570.0
margin_right = 956.0
margin_bottom = 600.0
rect_min_size = Vector2( 100, 30 )
size_flags_horizontal = 3
text = "Choose png"

[node name="FileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -314.0
margin_top = -209.0
margin_right = 379.0
margin_bottom = 188.0
popup_exclusive = true
window_title = "Открыть файл"
mode = 0
access = 2
filters = PoolStringArray( "*.png" )

[connection signal="text_changed" from="HBoxContainer/VBoxContainer/TextEdit" to="." method="_on_TextEdit_text_changed"]
[connection signal="button_down" from="HBoxContainer/VBoxContainer/ActionBtn" to="." method="_on_ActionBtn_button_down"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
